Fri Jul 11 06:26:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_get_coverages): return VM specific data instead of the
	  pointer to it.

Fri Jul 11 06:16:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (process.o): depends on util.h.

Fri Jul 11 05:07:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (pipe): prohibit inheritance.
	  fixed: [ruby-dev:35421]

Fri Jul 11 00:56:46 2008  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_create_core): fix GC problem.
	  [ruby-core:17669]

Thu Jul 10 22:06:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pstore.rb (PStore#transaction): return the result from the
	  block.  [ruby-core:17718]

Thu Jul 10 21:15:49 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_typelib.rb: add some illegal argument
	  test.
	
	* test/win32ole/test_win32ole_type.rb: ditto.

	* test/win32ole/test_win32ole_event.rb: ditto.

	* test/win32ole/test_win32ole_param.rb: ditto. 
	
	* test/win32ole/test_win32ole_method.rb: ditto.

Thu Jul 10 19:38:35 2008  wanabe  <s.wanabe@gmail.com>
	* test/ruby/envutil.rb (assert_normal_exit): r17993 revert.

Thu Jul 10 18:29:41 2008  wanabe  <s.wanabe@gmail.com>
	* test/ruby/envutil.rb (assert_normal_exit): finish writing script
	  before spawn("ruby") to avoid blocking in win32.

Thu Jul 10 17:20:50 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (insert): follow recent changes of globbing.

Thu Jul 10 14:09:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/coverage/coverage.c (rb_coverage_start): return nil.

Thu Jul 10 12:41:56 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_wait_for): fixed variable name.

Thu Jul 10 12:09:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_thread_t), vm.c (rb_thread_mark), process.c
	  (rb_last_status_get, rb_last_status_set, rb_last_status_clear):
	  moved last_status from rb_vm_t.  [ruby-dev:35414]
